fixed height issue on safari

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ h1 {
 .flex-container {
     display: flex;
     flex-direction: row;
+    height: 90%;
     width: 100%;
     flex-grow: 1;
     position: relative;
